Fix problem with unexpected list padding on mobile devices and problem of broken footer layout on mobile devices

--- a/themes/khralenok_com/css/footer.css
+++ b/themes/khralenok_com/css/footer.css
@@ -27,10 +27,20 @@ footer .logo svg {
   transform: scale(1.2);
 }
 
+.footer-credits {
+  display: flex;
+  justify-content: center;
+}
 .footer-links {
   display: flex;
   list-style: none;
+  padding-inline-start: 0;
   gap: var(--spacing-siblings);
+  justify-content: center;
+}
+
+.molecule:has(.footer-links) {
+  flex-direction: column;
 }
 
 .footer-links a {
