--- a/themes/khralenok_com/css/landing.css
+++ b/themes/khralenok_com/css/landing.css
@@ -185,6 +185,7 @@
 
   #hero ul {
     list-style: none;
+    padding-inline-start: 0;
   }
 
   #hero li {
